chore(deps): update actions/checkout digest to b4ffde6 (#1)
* chore(deps): update actions/checkout digest to b4ffde6

* using final version

* add mapstruct binding

* downgrade to java 15

* using adopt

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Raja Kolli <rajadilipkolli@gmail.com>