@@ -18,7 +18,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>15</java.version>
         <spring.cloud.version>2020.0.0-M3</spring.cloud.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -27,12 +27,12 @@
         <project.config.file.location>../../config/maven/store.properties
         </project.config.file.location>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
-        <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version>
-        <maven.failsafe.plugin.version>3.0.0-M4</maven.failsafe.plugin.version>
+        <maven.surefire.plugin.version>3.0.0</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.version>3.0.0</maven.failsafe.plugin.version>
         <maven.plugin.properties.version>1.0.0</maven.plugin.properties.version>
         <maven.plugin.version.version>2.7</maven.plugin.version.version>
         <maven.plugin.dockerfile.version>1.4.13</maven.plugin.dockerfile.version>
-        <springfox.swagger.version>3.0.0-SNAPSHOT</springfox.swagger.version>
+        <springfox.swagger.version>3.0.0</springfox.swagger.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <org.lombok.version>1.18.30</org.lombok.version>
 
@@ -110,6 +110,7 @@
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
                         <release>${java.version}</release>
+                        <compilerArgs>--enable-preview</compilerArgs>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.mapstruct</groupId>
@@ -121,6 +122,12 @@
                                 <artifactId>lombok</artifactId>
                                 <version>${org.lombok.version}</version>
                             </path>
+                            <!-- This is needed when using Lombok 1.18.16 and above -->
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok-mapstruct-binding</artifactId>
+                                <version>0.2.0</version>
+                            </path>
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
@@ -128,6 +135,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
                     <configuration>
+                        <argLine>--enable-preview</argLine>
                         <includes>
                             <include>**/*Tests.java</include>
                             <include>**/*Test.java</include>
@@ -137,6 +145,9 @@
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven.failsafe.plugin.version}</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <!--
